Subscription button is added in the profile-config template as requested.

--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -155,6 +155,11 @@
 						</div>
 					</form>
 					{{/with}}
+					<div class="row">
+								<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
+					                <div style="float:right;">{{#if subscribed true}}You are <b>subscribed</b> to our mail newsletter <button id="unsubscribe" type="click" class="btn btn-primary"><i class="fa fa-envelope-o" aria-hidden="true"></i></button>{{else}}You are <b>not subscribed</b> to our mail newsletter  <button id="subscribe" type="click" class="btn btn-primary"><i class="fa fa-envelope" aria-hidden="true"></i></button>{{/if}}</div>
+			        	        </div>
+					</div>
 			</div>
 	</section> <!-- ./Basics -->
 
@@ -215,7 +220,6 @@
 										</div>
 								</div>
 						</div>
-
 					</form>
 			</div>
 	</section> <!-- ./Security -->
