--- a/client/templates/members/bibliographyMembers.html
+++ b/client/templates/members/bibliographyMembers.html
@@ -28,12 +28,12 @@
 						</div>
 					</div>
 				</div>
-			</div> 
+			</div>
 		</section><!-- ./Search -->
-	
+
 	<!-- Bibliography Table Section -->
     <section id="services">
-     <div class="container">  
+     <div class="container">
 		{{#EasySearch.IfNoResults index=publicationsIndex}}
 			<h3>No publications found!</h3>
 		{{/EasySearch.IfNoResults}}
@@ -48,7 +48,7 @@
 						<th class="authors">Authors <i id="abcIcon" class="fa fa-sort-alpha-asc"></i></th>
 						<th class="title">Title</th>
 						<th class="outlet">Outlet</th>
-						<th> </th>
+						<th class="table-buttons"> </th>
 					</tr>
 				</thead>
 				<tbody>
@@ -56,13 +56,13 @@
 					<tr>
 						<td class="table-text-bold">{{year}}</td>
 						<td>
-								
+
 							<ul class="list-unstyled">
 								{{#each authors}}
 								<li>{{this.firstName}} {{this.lastName}}</li>
 								{{/each}}
 							</ul>
-								
+
 						</td>
 						<td><a class="tbody-link" href="{{pathFor route = 'bibliographyPage'}}">{{title}}</a></td>
 						{{#if outlet}}
@@ -90,7 +90,7 @@
 		</div>
 
 			{{else}}
-				{{#if publicationsIndex}}				
+				{{#if publicationsIndex}}
 				<div class="table-responsive">
 					<table class="table table-striped table-hover">
 						<thead>
@@ -103,18 +103,18 @@
 							</tr>
 						</thead>
 						<tbody>
-						{{#EasySearch.Each index=publicationsIndex}}	
+						{{#EasySearch.Each index=publicationsIndex}}
 							<!-- {{#each publicationData}} -->
 							<tr>
 								<td class="table-text-bold">{{year}}</td>
 								<td>
-										
+
 									<ul class="list-unstyled">
 										{{#each authors}}
 										<li>{{this.firstName}} {{this.lastName}}</li>
 										{{/each}}
 									</ul>
-										
+
 								</td>
 								<td><a class="tbody-link" href="{{pathFor route = 'newsAndEventsPage'}}">{{title}}</a></td>
 								{{#if outlet}}
@@ -133,10 +133,10 @@
 							<button href="#" class="btn btn-primary page-scroll extra-spacing-bottom">SEE MORE</button>
 						</div>
 					</div>
-				</div>    
+				</div>
 				{{/if}}
 			{{/EasySearch.IfInputEmpty}}
-			
+
 		{{> EasySearch.LoadMore index=publicationsIndex}}
 		</div>
 	</section> <!-- end row -->
