--- a/client/templates/admin/admin-news-events-edit.html
+++ b/client/templates/admin/admin-news-events-edit.html
@@ -1,5 +1,6 @@
 <template name="adminNewsEventsEdit">
     <div class="container extra-spacing-bottom extra-spacing-top">
+	<div id="preLoad" style="display:none;">
 		<div class="putdown extra-spacing-bottom">
             <h1 class="extra-spacing-bottom">EDIT ENTRY</h1>
             <hr>
@@ -21,13 +22,13 @@
 		            	</div>
 	            	</div>
 		        </div>
-
-            <div class="form-group">
-                  <label for="newsKeywords" class="col-sm-2 control-label">Keywords</label>
-            <div class="col-sm-10">
-                  <input type="select" id="newsKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)">
-            </div>
-            </div>
+		  
+        <div class="form-group">
+            <label for="newsKeywords" class="col-sm-2 control-label">Keywords</label>
+        <div class="col-sm-10">
+            <input type="select" id="newsKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)" value="{{currentTags}}">
+        </div>
+        </div>
 
 		        <div class="form-group">
 		            <label for="description" class="col-sm-2 control-label">Type</label>
@@ -79,6 +80,7 @@
 		        </div>
 
 		    </form> <!-- end form -->
+			
 		{{/with}}
 
 			<div class="row">
@@ -97,5 +99,7 @@
 
 			</div>
 		</div> <!-- putdown -->
+		{{afterLoad}}
+		</div> <!-- Preload-->
 	</div> <!-- container -->
 </template>
