--- a/client/templates/guests/contact.html
+++ b/client/templates/guests/contact.html
@@ -31,71 +31,71 @@ allowing us to keep our website up-to-date.</h2>
 	<section id="services">
 			<div class="container">
 				<div class="row text-center extra-spacing-top">
-					<div class="col-sm-6">
+				    <br>
+					<br>
+					
+				    {{#each toUserContact}}
+					<center>
+					<div style="margin-top:5px;height:350px;" class="col-sm-6">
 						<div class="team-member">
-							<img class="contact-thumbnail" src="img/seidl.jpg" alt="David Seidl">
-							<h4>David Seidl</h4>
-							<p class="text-muted">Overall Coordination</p>
-							<ul class="list-inline social-buttons">
-								<li>
-                                    <a href="mailto:david.seidl@business.uzh.ch"><i class="fa fa-envelope"></i></a>
-								</li>
-								<li>
-									<a href="mailto:david.seidl@business.uzh.ch">david.seidl@business.uzh.ch</a>
-								</li>									</ul>
+						
+						    <div class="imgBlock">
+							    <center>
+							        <img  src="{{profile.pictureID}}" alt="No Profile Photo">
+								</center>
+							</div>
+						
+							<div style="width:300px">
+							
+							    <div class="testing">
+								    <div style="clear:both;" id="hoverForm">
+							            <form id="test">
+								            <input name="userContactId" id="userContactId" type="hidden" value="{{_id}}" placeholder=""/>
+									        <button style="float:right;margin-right:54%;margin-top:-5px;margin-bottom:0px;" class="btn btn-primary" id="edit"><i style="font-size:15px;" class="fa fa-pencil-square-o"></i></button>
+									
+							            </form>
+							            <form id="eliminarUsuario">
+				                            <input name="userId" id="userId" type="hidden" value="{{_id}}" placeholder=""/>
+	                                        <button style="float:left;margin-left:54%;margin-top:-32px;margin-bottom:0px;" class="btn btn-primary" id="delete"><i style="font-size:15px;" class="fa fa-trash"></i></button>
+                                        </form>
+							        </div>
+									<div style="margin-top:1px">
+							        <h4>{{profile.firstName}}&nbsp;&nbsp;{{profile.lastName}}</h4>
+							        <p class="text-muted">{{profile.position}}</p>
+							        <ul class="list-inline social-buttons">
+								        <li>
+                                            <a href="mailto:{{profile.email}}"><i class="fa fa-envelope"></i></a>
+								        </li>
+								        <li>
+									        <a href="mailto:{{profile.email}}">{{profile.email}}</a>
+								        </li>
+							        </ul>
+							        </div>
+							    </div>
+						    </div>
 						</div>
+						
 				    </div>
-
-                    <div class="col-sm-6">
-						<div class="team-member">
-							<img class="contact-thumbnail" src="img/whittington.jpg" alt="Richard Whittington">
-							<h4>Richard Whittington</h4>
-								<p class="text-muted">Overall Coordination</p>
-								<ul class="list-inline social-buttons">
-									<li>
-                                        <a href="mailto:richard.whittington@new.ox.ac.uk"><i class="fa fa-envelope"></i></a>
-									</li>
-									<li>
-										<a href="mailto:richard.whittington@new.ox.ac.uk">richard.whittington@new.ox.ac.uk</a>
-									</li>
-								</ul>
-						</div>
+					</center>
+					{{/each}}
+                    
+				
+                        <div class="col-sm-6">
+						    <div class="team-member">
+						
+						        <center>
+							        <div class="hoverOver">
+							            <a href="#" id="add" class="hoverEffect"><div class="divAddContact">
+										<i style="font-size:40px;margin-top:130px;" class="fa fa-plus" aria-hidden="true">
+										</i></div></a>
+							        </div>
+						        </center>
+						    </div>
+					    </div>
 					</div>
-				</div>
-
-				<div class="row text-center">
-                    <div class="col-sm-6">
-                        <div class="team-member">
-                            <img class="contact-thumbnail" src="img/dobusch.jpg" alt="Leonhard Dobusch">
-                            <h4>Leonhard Dobusch</h4>
-                            <p class="text-muted">Overall Coordination</p>
-                            <ul class="list-inline social-buttons">
-                                <li>
-                                    <a href="mailto:leonhard.dobusch@fu-berlin.de"><i class="fa fa-envelope"></i></a>
-                                </li>
-                                <li>
-                                    <a href="mailto:leonhard.dobusch@fu-berlin.de">leonhard.dobusch@fu-berlin.de</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6">
-                        <div class="team-member">
-                            <img class="contact-thumbnail" src="img/splitter.jpg" alt="Violetta Splitter">
-                                <h4>Violetta Splitter</h4>
-                                <p class="text-muted">Membership Chair</p>
-                                <ul class="list-inline social-buttons">
-                                    <li>
-                                        <a href="mailto:violetta.splitter@business.uzh.ch"><i class="fa fa-envelope"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="mailto:violetta.splitter@business.uzh.ch">violetta.splitter@business.uzh.ch</a>
-                                    </li>
-                                </ul>
-                        </div>
-                    </div>
-				</div>
+				
 			</div>
+			{{>modalUserContact}}<!-- Modal template addUser -->
+			{{>modalEditUser}}<!-- Modal template EditUser -->
 	</section>
 </template>
