--- a/client/templates/admin/admin-news-events-edit.html
+++ b/client/templates/admin/admin-news-events-edit.html
@@ -2,7 +2,7 @@
     <div class="container extra-spacing-bottom extra-spacing-top">
 	<div id="preLoad" style="display:none;">
 		<div class="putdown extra-spacing-bottom">
-            <h1 class="extra-spacing-bottom">EDIT ENTRY</h1>
+            <h1 class="extra-spacing-bottom">EDIT ENTRY </h1>
             <hr>
 			{{#with newsEventsEntry}}
 			<form class="form-horizontal" role="form">
@@ -22,11 +22,18 @@
 		            	</div>
 	            	</div>
 		        </div>
-		  
+		<div class="form-group">
+            <label for="selectCategory" class="col-sm-2 control-label">Choose a Category</label>
+          <div class="col-sm-10">
+            <select id="selectCategory" value="{{currentTags}}">
+            </select>
+          </div>
+        </div>		 
+		 
         <div class="form-group">
             <label for="newsKeywords" class="col-sm-2 control-label">Keywords</label>
         <div class="col-sm-10">
-            <input type="select" id="newsKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)" value="{{currentTags}}">
+            <input type="select" id="newsKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)" value="{{currentCategory}}">
         </div>
         </div>
 
