--- a/client/templates/admin/admin-news-events-edit.html
+++ b/client/templates/admin/admin-news-events-edit.html
@@ -25,7 +25,7 @@
 		<div class="form-group">
             <label for="selectCategory" class="col-sm-2 control-label">Choose a Category</label>
           <div class="col-sm-10">
-            <select id="selectCategory" value="{{currentTags}}">
+            <select id="selectCategory" value="{{currentCategory}}">
             </select>
           </div>
         </div>		 
@@ -33,7 +33,7 @@
         <div class="form-group">
             <label for="newsKeywords" class="col-sm-2 control-label">Keywords</label>
         <div class="col-sm-10">
-            <input type="select" id="newsKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)" value="{{currentCategory}}">
+            <input type="select" id="newsKeywords" placeholder="Choose some tags (e.g. JavaScript, Math)" value="{{currentTags}}">
         </div>
         </div>
 
