--- a/client/templates/guests/home.html
+++ b/client/templates/guests/home.html
@@ -27,7 +27,7 @@
 						{{#if category}}
 						<em>Category: {{category}}</em><br>
 						{{/if}}
-						{{#each keywords}}<small>{{this}}, </small>{{/each}}
+						{{#each keywords}}<small>{{this}} </small>{{/each}}
                         <h4>{{title}}</h4>
                         <p class="text-muted"> {{shortIt this.description 250}} <a href="{{pathFor route='newsAndEventsPage'}}" class="textlink">read more </a></p>
                     </div>
