--- a/client/templates/account-templates/joinus.html
+++ b/client/templates/account-templates/joinus.html
@@ -26,7 +26,7 @@
                     <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
                     <i class="fa fa-bullhorn fa-stack-1x fa-inverse"></i>
                 </span>
-                <!-- <h4 class="service-heading">Advantage</h4> -->
+                <h4 class="service-heading">News</h4>
                 <p class="text-muted">As a member you can submit news to the whole Open Strategy community and disseminate related research findings.</p>
             </div>
             <div class="col-sm-4">
@@ -34,15 +34,15 @@
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i> -->
                     <i class="fa fa-comments-o fa-stack-1x fa-inverse joinus-icons"></i>
                 </span>
-                <!-- <h4 class="service-heading">Advantage</h4> -->
-                <p class="text-muted">Cooperate internationally by searching for data on OSN members.</p>
+                <h4 class="service-heading">Collaborations</h4>
+                <p class="text-muted">Collaborate internationally by searching for data on OSN members.</p>
             </div>
             <div class="col-sm-4">
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i> -->
                     <i class="fa fa-newspaper-o fa-stack-1x fa-inverse"></i>
                 </span>
-                <!-- <h4 class="service-heading">Advantage</h4> -->
+                <h4 class="service-heading">Literature</h4>
                 <p class="text-muted">Search for Open Strategy literature on specific topics within the Bibliography</p>
             </div>
         </div>
