--- a/client/templates/guests/newsEventsPage.html
+++ b/client/templates/guests/newsEventsPage.html
@@ -1,6 +1,6 @@
 <template name="newsAndEventsPage">
 	<!-- Breadcrumb Profile-Settings -->
-			<ol class="breadcrumb-content text-left">
+			<ol class="breadcrumb-content text-left putdown extra-spacing-top">
 					<li><a class="breadcrumb-content-link" href="{{pathFor route = 'home'}}">Home</a></li>
 					<li><a class="breadcrumb-content-link" href="{{pathFor route = 'allNewsEvents'}}">News &amp; Events</a></li>
 					<li class="active">Article Title</li>
