--- a/client/templates/members/membersMembers.html
+++ b/client/templates/members/membersMembers.html
@@ -10,7 +10,7 @@
 					<div class="header-content-inner">
 							<h1>Members</h1>
 							<hr>
-							<h2>Anybody interested in Open Strategy can join the OSN. Registration is free.</h2>
+							<h2>Members are international researchers who share an interest in developing Open Strategy Research, encourage collaborative research projects among other members in the field and disseminate research findings on Open Strategy through this website.</h2>
 					</div>
 			</div>
 	</header> <!-- ./Stage -->
