--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1558,9 +1558,9 @@ section.layer-login {
 }
 
 .joinus-icons .fa-stack-1x{
-		font-size: 65px;
+		font-size: 63px;
         margin-top: 0;
-        color: @gray-light;
+        color: #cbcfd3;
 }
 
 
