--- a/client/templates/guests/aboutUs.html
+++ b/client/templates/guests/aboutUs.html
@@ -11,8 +11,22 @@
       <div class="header-content-inner">
         <h1>About Us</h1>
         <hr>
-        <h2>Some text</h2>
+        <h2></h2>
       </div>
     </div>
   </header> <!-- ./Stage -->
+
+  <!-- Content -->
+  <section id="services">
+      <div class="container">
+          <div class="row">
+              <!-- Content -->
+              <div class="col-sm-8 col-sm-offset-2 col-xs-12">
+                  <h3 class="text-left extra-spacing-bottom extra-spacing-top">"Open strategy" describes a variety of practices that promote more transparent and inclusive strategy-making.</h3>
+                  <p class="extra-spacing-bottom">Transparency refers to openness in terms of information and communication, both internally and externally: for example, Chief Executive blogs, town-halls or investor strategy updates. Inclusiveness refers to the involvement or participation in strategy-making of internal or external stakeholders from outside the usual senior management team, for example through strategy jams, wikis and workshops. Openness can be applied to both strategy-formation and strategy-implementation processes. Closely allied phenomena include ‘democratic’ strategy, crowd-sourcing and open innovation.</p>
+              </div> <!-- ./Content -->
+          </div>
+      </div>
+  </section> <!-- ./Content -->
+
 </template>
