--- a/client/templates/guests/home.html
+++ b/client/templates/guests/home.html
@@ -5,7 +5,7 @@
 	        <div class="header-home-inner">
 	            <h1><strong>Open Strategy</strong> Network <br>WELCOME!</h1>
 	            <hr>
-	            <h2>OSN is an international network of scholars interested in studying open strategy, i.e. more inclusive and participatory forms of strategizing. Coordinated by the University of Zurich, Saïd Business School and the University of Innsbruck, OSN investigates new forms of strategizing such as blogging, jamming and crowd-sourcing. Join the network and contribute to the OSN development! <a class="textlink" href="about.html">Read more</a></h2>
+	            <h2>OSN is an international network of scholars interested in studying open strategy, i.e. more inclusive and transparent forms of strategizing. Coordinated by the University of Zurich, Saïd Business School and the University of Innsbruck, OSN investigates new forms of strategizing such as blogging, jamming and crowd-sourcing. Join the network and contribute to the OSN development!<a class="textlink" href="{{pathFor route='aboutUs'}}">Read more</a></h2>
 	            <button type="button" class="btn btn-primary btn-xl page-scroll js-join">JOIN US</button>
 	        </div>
 	    </div>
