--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -10,24 +10,22 @@ body {
 		font-family: 'Lato',sans-serif, 'Helvetica Neue', Arial,sans-serif;
 }
 
-small,
-.small {
-  font-size: 84%;
-  background-color: @gray-light;
-  color: white;
-  padding: 3px 4px;
-  margin: 10px 5px 10px 0;
-  border-radius: 2px;
+/*@media (min-width: 640px) {
+	.container {
+		width: 650px;
+	}
 }
-
-
-.news-category {
-  font-style: normal;
-  font-size: 16px;
-  font-weight: 300;
-  margin-bottom: 10px;
-  color: @gray;
+@media (min-width: 1024px) {
+	.container {
+		width: 970px;
+	}
 }
+@media (min-width: 1280px) {
+	.container {
+		width: 1170px;
+	}
+}
+	*/
 
 @media (max-width: 990px) {
 .container {
@@ -463,10 +461,6 @@ section {
 		padding-bottom: @extra-spacing-bottom;
 }
 
-.spacing-mini-bottom {
-    padding-bottom: 10px;
-}
-
 aside {
 		padding: 3.125em 0;
 }
@@ -531,9 +525,6 @@ aside {
                 padding-left: 25px!important;
                 color: @brand-primary!important;
         }
-
-
-
 
         a:hover.profile-links {
             padding-left: 25px!important;
@@ -1134,6 +1125,99 @@ header .header-content .header-content-inner p {
 
 
 
+// Footer
+
+footer {
+		padding: 0px 15 15px 0;
+		background-color: @gray-light;
+		color: #eaeaea;
+		font-size: 14px;
+		text-align: center;
+		span.copyright {
+				line-height: 40px;
+				.heading-font;
+				text-transform: none;
+		}
+/*    ul.quicklinks {
+				margin-bottom: 0;
+				line-height: 40px;
+				.heading-font;
+				color: yellow;
+				text-transform: none;
+		}*/
+}
+
+h3.footer-head {
+		font-size: 18px;
+		margin-top: 20px;
+        color: black;
+}
+
+a .footer-link {
+		color: white;
+		text-decoration: none;
+		font-size: 12px;
+		cursor: pointer;
+		padding-bottom: 20px;
+}
+
+.footer-link:hover {
+		color: white;
+		text-decoration: underline;
+}
+
+.copyright {
+		padding: 8px 0 8px 0;
+		// background-color: #000;
+		font-size: 14px;
+		color: #000000;
+}
+
+a.imprint-link {
+		color: @brand-primary;
+		text-decoration: none;
+		font-size: 14px;
+		cursor: pointer;
+		padding-bottom: 0px;
+}
+
+a.imprint-link:hover {
+		color: darken(@brand-primary, 10%);
+		// text-decoration: underline;
+}
+
+ul.list-inline.quicklinks {
+		margin-bottom: 0;
+}
+
+
+.sponsor-thumbnail {
+	height: 7.2rem;
+	padding-bottom: 20px;
+    filter: grayscale();
+}
+
+.sponsor-thumbnail-innsbruck {
+	height: 5.6rem;
+	padding-bottom: 20px;
+    filter: grayscale();
+}
+
+.sponsor-thumbnail:hover {
+	height: 7.2rem;
+	padding-bottom: 20px;
+    color: white;
+    cursor: pointer;
+}
+
+.sponsor-thumbnail-innsbruck:hover {
+	height: 5.6rem;
+	padding-bottom: 20px;
+    filter: sepia();
+    cursor: pointer;
+}
+
+
 .news-thumbnail {
 		border: none;
 		margin-right: 10px;
@@ -1274,16 +1358,16 @@ ul.list-inline.social-buttons {
 
 
 .glyphicon-download {
-		font-size: 16px;
+		font-size: 18px;
 }
 
 /*admin edit button*/
 .glyphicon-edit {
-		font-size: 16px;
+		font-size: 18px;
 }
 
 .button-download {
-		padding: 3px 4px 0px 6px;
+		padding: 3px 5px 0px 5px;
 }
 
 
@@ -1350,23 +1434,19 @@ td.table-text-bold {
 }
 
 th.year {
-		width: 8%;
+		width: 10%;
 }
 
 th.authors {
-		width: 22%;
+		width: 25%;
 }
 
 th.title {
-		width: 30%;
+		width: 40%;
 }
 
 th.outlet {
 		width: 30%;
-}
-
-th.table-buttons {
-    width: 15%;
 }
 
 
@@ -1558,9 +1638,9 @@ section.layer-login {
 }
 
 .joinus-icons .fa-stack-1x{
-		font-size: 63px;
+		font-size: 65px;
         margin-top: 0;
-        color: #cbcfd3;
+        color: @gray-light;
 }
 
 
@@ -1699,184 +1779,50 @@ nav-login {
     padding: 15px;
 }
 
-
-/** Icontest */
-ul.iconmenu > li{
-    position: relative;
+//adding to work with contact template
+.divAddContact {
+	height:300px;
+	width:200px;
+	border: 4px solid @brand-primary-light;
+	color:@brand-primary-light;
+}
+.testing #hoverForm{
+	display:none;
+	
 }
 
-.dropdown-menu > li > a.profile-links.icon {
-    padding-left: 45px;
+.testing:hover #hoverForm{
+    display:block;
 }
-a.profile-links.icon {
-        &:before{
-            position: absolute;
-            left: 20px;
-            font: normal normal normal 14px FontAwesome;
-            line-height: 21px;
-        }
-
-        &.settings:before{
-            content:"\f013";
-            left: 22px;
-        }
-        &.news:before{
-            content: "\f1ea";
-        }
-
-        &.publications:before{
-            content: "\f0f6";
-            left: 22px;
-        }
-
-        &.members:before{
-            content: "\f0c0";
-        }
-
-        &.logout:before{
-            content: "\f08b";
-            left: 22px;
-        }
+.imgBlock{
+	position:relative;
+	height:200px;
+	width:175px;
+	overflow:hidden;
+	margin:0 auto;
+}
+.imgBlock img{
+	display: block;
+    max-width: none;
+	min-height:200px;
+	
 }
 
-
-@media (max-width: 827px) {
-    .dropdown-menu > li > a.profile-links.icon {
-        padding-left: 47px!important;
-    }
-    a.profile-links.icon {
-            &:before{
-                position: absolute!important;
-                left: 22px!important;
-                font: normal normal normal 14px FontAwesome!important;
-                line-height: 21px!important;
-            }
-
-            &.settings:before{
-                content:"\f013"!important;
-                left: 24px!important;
-            }
-            &.news:before{
-                content: "\f1ea"!important;
-            }
-
-            &.publications:before{
-                content: "\f0f6"!important;
-                left: 24px!important;
-            }
-
-            &.members:before{
-                content: "\f0c0"!important;
-            }
-
-            &.logout:before{
-                content: "\f08b"!important;
-                left: 24px!important;
-            }
-    }
+.col-sm-6 img {
+	display:block;
+	position:relative;
+	height:auto;
+	width:110%;
+	margin:0 -5%;
 }
 
-
-// Footer
-
-footer {
-		padding: 0px 15 15px 0;
-		background-color: @gray-light;
-		color: #eaeaea;
-		font-size: 14px;
-		text-align: center;
-		span.copyright {
-				line-height: 40px;
-				.heading-font;
-				text-transform: none;
-		}
-/*    ul.quicklinks {
-				margin-bottom: 0;
-				line-height: 40px;
-				.heading-font;
-				color: yellow;
-				text-transform: none;
-		}*/
+.hoverOver{
+	height:300px;
+	width:200px;
+}
+.hoverEffect:hover .divAddContact{
+	border-color:@brand-primary;
+	color:@brand-primary;
 }
 
-.fa-heart {
-    font-size: 12px;
-}
-
-h3.footer-head {
-		font-size: 18px;
-		margin-top: 20px;
-        color: black;
-}
-
-
-.copyright {
-		padding: 8px 0 8px 0;
-		// background-color: #000;
-		font-size: 13px;
-		color: #000000;
-}
-
-a.footer-link {
-		color: @brand-primary;
-		text-decoration: none;
-		font-size: 13px!important;
-		cursor: pointer;
-		padding-bottom: 0px;
-}
-
-a.footer-link:hover {
-		color: darken(@brand-primary, 10%);
-		// text-decoration: underline;
-}
-
-ul.list-inline.quicklinks {
-		margin-bottom: 0;
-}
-
-
-// Host Sponsors
-
-.sponsor-thumbnail {
-	height: 7.2rem;
-	padding-bottom: 20px;
-    filter: grayscale();
-}
-
-.sponsor-thumbnail-innsbruck {
-	height: 5.8rem;
-    padding-top: 6px;
-	padding-bottom: 14px;
-    filter: grayscale();
-}
-
-.sponsor-thumbnail:hover {
-	padding-bottom: 20px;
-    color: white;
-    cursor: pointer;
-}
-
-.sponsor-thumbnail-innsbruck:hover {
-    filter: sepia();
-    cursor: pointer;
-}
-
-// Social Media Bar
-
-.some {
-    padding-right: 12px;
-    padding-left: 12px;
-    font-size: 20px;
-}
-
-a.follow-facebook:hover {
-	color: #3b5998;
-}
-
-a.follow-twitter:hover {
-	color: #55acee;
-}
-
-a.follow-rss:hover {
-	color: #fa9b39;
-}
+//end
