--- a/client/templates/guests/home.html
+++ b/client/templates/guests/home.html
@@ -25,9 +25,11 @@
                 <div class="col-sm-4">
                     <div class="caption">
 						{{#if category}}
-						<em>Category: {{category}}</em><br>
+						<div class="category">
+                            <em>Category: {{category}}</em><br>
+                        </div>
 						{{/if}}
-						{{#each keywords}}<small>{{this}} </small>{{/each}}
+						{{#each keywords}}<small class="tags">{{this}}</small>{{/each}}
                         <h4>{{title}}</h4>
                         <p class="text-muted"> {{shortIt this.description 250}} <a href="{{pathFor route='newsAndEventsPage'}}" class="textlink">read more </a></p>
                     </div>
