Style Footer and Header
- HTML Made with love DOT
- HTML Added Forgot password HTML
- HTML Added New to OSN
- CSS Merge Conflict removed

--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -62,7 +62,7 @@
             <div class="row text-center">
                 <div class="col-md-6 col-md-offset-6 text-right col-sm-12">
                     <ul class="list-inline quicklinks">
-                        <li><span class="copyright">&copy; Open Strategy Network 2016 - Made with <i class="fa fa-heart"></i> by <a class="footer-link" href="#">webgstlt</a></span> </li>
+                        <li><span class="copyright">&copy; Open Strategy Network 2016 <span class="separator">·</span> Made with <i class="fa fa-heart"></i> by <a class="footer-link" href="#">webgstlt</a></span> </li>
                         <!-- <li><a class="footer-link" href="imprint.html">Imprint</a></li> -->
 <!--                     <li><a href="#">Terms of Use</a></li> -->
                     </ul>
