Style Upload-Button in Join us
- Style Upload and Edit-Text
- Check in Firefox, Chrome and Safari

--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -371,11 +371,16 @@ a.active {
     background-color: grey;
     border-radius: 2px;
     color: gray-light;
-    padding-top: 10px;
+    padding-top: 8px;
     position: relative;
     overflow: hidden;
     display: inline-block;
 }
+
+.uploadInput-text {
+    margin-top: -1px;
+}
+
 
 input, textarea, keygen, select, button {
     text-rendering: auto;
