--- a/client/templates/account-templates/uploadInput.html
+++ b/client/templates/account-templates/uploadInput.html
@@ -12,13 +12,13 @@
             Uploading... <!-- When the user upload a new profile pic, this text appears -->
             </div>
 		</div>
-		<div style="height:35px;display:none;" id="hiddenName">
+		<div style="height:34px;display:none;" id="hiddenName">
 		    <div class="form-group fileUpload btn btn-default btn-block btn-icon btn-file-upload">
             </div>
 		</div>
          <div id="uploadInput">
-		  <div style="height:35px" class="form-group fileUpload btn btn-default btn-block btn-icon btn-file-upload">
-              <span class="glyphicon glyphicon-upload"></span><div>Upload a profile photo</div>
+		  <div style="height:34px" class="form-group fileUpload btn btn-default btn-block btn-icon btn-file-upload">
+              <span class="glyphicon glyphicon-upload"></span><div class="uploadInput-text">Upload a profile photo</div>
               <input type="file" class="upload js-Profile"/>
           </div>
           <span class="help-block {{#unless hasError}}hide{{/unless}}">{{errorText}}</span>
@@ -27,4 +27,3 @@
     </div>
   </div>
 </template>
-
