--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -77,7 +77,9 @@ related news are warmly welcome. In order to add news to this section, please se
             <em>{{category}}</em><br>
         </div>
         {{/if}}
-        {{#each keywords}}<small class="tags">{{this}} </small>{{/each}}
+        {{#if keywordsExist}}
+          {{#each keywords}}<small class="tags">{{this}} </small>{{/each}}
+        {{/if}}
         {{#if imageExists}}
         <h4>{{title}}<img alt="news thumbnail" class="news-thumbnail" src="{{ coverImage.url }}" /></h4>
         {{else}}
