--- a/client/templates/guests/home.html
+++ b/client/templates/guests/home.html
@@ -24,15 +24,17 @@
             	{{#each newsEventsData}}
                 <div class="col-sm-4">
                     <div class="caption">
-						{{#if category}}
-						<div class="category">
-                            <em>Category: {{category}}</em><br>
-                        </div>
-						{{/if}}
-						{{#each keywords}}<small class="tags">{{this}}</small>{{/each}}
-                        <h4>{{title}}</h4>
-                        <p class="text-muted"> {{shortIt this.description 250}} <a href="{{pathFor route='newsAndEventsPage'}}" class="textlink">read more </a></p>
-                    </div>
+											{{#if category}}
+											<div class="category">
+			                  <em>Category: {{category}}</em><br>
+			                </div>
+											{{/if}}
+											{{#if keywordsExist}}
+											{{#each keywords}}<small class="tags">{{this}}</small>{{/each}}
+											{{/if}}
+	                    <h4>{{title}}</h4>
+	                    <p class="text-muted"> {{{shortIt this.description 150}}} <a href="{{pathFor route='newsAndEventsPage'}}" class="textlink">read more </a></p>
+	                </div>
                 </div>
                 {{/each}}
             </div>
